# Server_Reliability_CMake_ver

./: CMakeLists.txt
include/RNG/: box_muller_transform.h  linear_congruential_RNG.h  normal_distribution_RNG.h
include/player/: player.h
include/server/: server.h  server_manager.h
src/: CMakeLists.txt  main.cpp
src/RNG/: CMakeLists.txt  box_muller_transform.cpp  linear_congruential_RNG.cpp  normal_distribution_RNG.cpp
src/player/: CMakeLists.txt
src/server/: CMakeLists.txt  server.cpp  server_manager.cpp
